win client fixed

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,17 +1,23 @@
 CC=gcc
 CFLAGS=-c -Wall -g -O0 -pedantic
 LDFLAGS=
-SOURCES=client.c
+LIBRARY=unix_lib
+SOURCES=client.c ../$(LIBRARY).c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLES=client
 
 all: $(SOURCES) $(EXECUTABLES)
+	bash Makefile.win
+	cp client.exe ~/"PlayOnLinux's virtual drives"/cygwin/drive_c/
 
-client: client.o
-	$(CC) $(LDFLAGS) client.o -o $@
+client: client.o $(LIBRARY).o
+	$(CC) $(LDFLAGS) client.o $(LIBRARY).o -o $@
 
 .c.o:
 	$(CC) $(CFLAGS) $< -o $@
 
+$(LIBRARY).o: ../$(LIBRARY).c
+	$(CC) $(CFLAGS) ../$(LIBRARY).c -o $(LIBRARY).o
+
 clean:
-	rm $(OBJECTS) $(EXECUTABLES)
+	rm *.o client client.exe
