--- a/server/Makefile
+++ b/server/Makefile
@@ -1,18 +1,23 @@
 CC=gcc
 CFLAGS=-c -Wall -g -O0 -pedantic
 LDFLAGS=
-SOURCES=server.c
+LIBRARY=unix_lib
+SOURCES=server.c ../$(LIBRARY).c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLES=server
 
 all: $(SOURCES) $(EXECUTABLES)
 	bash Makefile.win
+	cp server.exe ~/"PlayOnLinux's virtual drives"/cygwin/drive_c/
 
-server: server.o
-	$(CC) $(LDFLAGS) server.o -o $@
+server: server.o $(LIBRARY).o
+	$(CC) $(LDFLAGS) server.o $(LIBRARY).o -o $@
 
 .c.o:
 	$(CC) $(CFLAGS) $< -o $@
 
+$(LIBRARY).o: ../$(LIBRARY).c
+	$(CC) $(CFLAGS) ../$(LIBRARY).c -o $(LIBRARY).o
+
 clean:
-	rm $(OBJECTS) $(EXECUTABLES) server.exe
+	rm *.o server server.exe
