--- a/client/Makefile
+++ b/client/Makefile
@@ -6,22 +6,22 @@ SOURCEDIR = src
 BUILDDIR = build
 
 SOURCES = $(wildcard $(SOURCEDIR)/*.c)
+SOURCES += ../unix_lib.c
 OBJECTS = $(patsubst $(SOURCEDIR)/*.c,build/%.o,$(SOURCES))
 
 EXECUTABLE=client
 
 all: dir $(BUILDDIR)/$(EXECUTABLE)
-	# make -f beagle_rules.mk
-	# bash win_rules.mk
 
 dir:
 	mkdir -p $(BUILDDIR)
-
+arm:
+	make -f beagle_rules.mk
+win:
+	make -f win_rules.mk
 $(BUILDDIR)/$(EXECUTABLE): $(OBJECTS)
 	$(CC) $^ -o $@
-
 $(OBJECTS):
 	$(CC) $(CFLAGS) $< -o $@
-
 clean:
-	rm -rf build
+	rm -f $(BUILDDIR)/*.o $(BUILDDIR)/$(EXECUTABLE)
