--- a/server/Makefile
+++ b/server/Makefile
@@ -6,16 +6,18 @@ SOURCEDIR = src
 BUILDDIR = build
 
 SOURCES = $(wildcard $(SOURCEDIR)/*.c)
+SOURCES += ../unix_lib.c
 OBJECTS = $(patsubst $(SOURCEDIR)/*.c,build/%.o,$(SOURCES))
 
 EXECUTABLE=server
 
 all: dir $(BUILDDIR)/$(EXECUTABLE)
-	# make -f beagle_rules.mk
-	# bash win_rules.mk
 
 dir:
 	mkdir -p $(BUILDDIR)
+
+win:
+	make -f win_rules.mk
 
 $(BUILDDIR)/$(EXECUTABLE): $(OBJECTS)
 	$(CC) $^ -o $@
@@ -24,4 +26,4 @@ $(OBJECTS):
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
-	rm -rf build
+	rm -f $(BUILDDIR)/*.o $(BUILDDIR)/$(EXECUTABLE)
